# iprofi2025-solution

./: .gitignore  README.md  REPORT.md  docker-compose.nvidia.yaml  docker-compose.yaml
solution_bachelor/: CMakeLists.txt  package.xml  setup.py  update_bashrc.sh
solution_bachelor/include/solution_bachelor/: solution.hpp
solution_bachelor/launch/: start.launch.py
solution_bachelor/msg/: Pose2DArray.msg  TwistStampedArray.msg
solution_bachelor/scripts/: control_scheduler.py  control_summator.py  controller.py  director.py  history_keeper.py  lidar_v2.py  logger.py  mapper.py  pid_controller.py  positioner.py  process_data.py  pure_pursuit.py  segmentation_algo.txt  solution.py  utils.py
solution_bachelor/scripts/failed_scripts/: centerer.py  control_exp.ipynb  control_scheduler.py  logs_processing.ipynb
solution_bachelor/src/: solution.cpp
