<?xml version="1.0"?>
<package format="3">
  <name>solution_bachelor</name>
  <version>0.0.1</version>
  <description>The bachelor solution package for ROS 2</description>
  <maintainer email="texnoman@itmo.ru">kika</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>   <!-- For Python -->
  <depend>rclcpp</depend>  <!-- For C++ -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- for my messages -->
  <depend>geometry_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_default_generator>rosidl_default_generators</rosidl_default_generator>
    <rosidl_python>rosidl_python</rosidl_python>>
  </export>
</package>
